# forge

./: .gitignore  LICENSE  README.md
nixos-cluster/: .sops.yaml  README.md  flake.nix  secrets-encrypted.yaml  secrets.yaml
nixos-cluster/common/: common.nix
nixos-cluster/configuration/: flake.nix
nixos-cluster/configuration/common/: common.nix  k3s.nix  longhorn.nix  monitoring.nix  sops.nix  users.nix
nixos-cluster/hosts/arcturus/: configuration.nix
nixos-cluster/kubernetes/: README.md  cert-manager.yaml  dashboard-certificate.yaml  dashboard.yaml  letsencrypt-issuer.yaml  longhorn-backuptarget-default.yaml  longhorn-nodeport-patch.yaml  longhorn-nodeport-service.yaml  longhorn-storageclass-nobackup.yaml  longhorn.yaml  metallb-ipaddresspool.yaml  nginx-ingress.yaml
nixos-cluster/kubernetes/cloudflared/: deployment.yaml  hosts-dashboard.yaml
nixos-cluster/kubernetes/dashboard/: dashboard-ingress.yaml  dashboard.yaml
nixos-cluster/kubernetes/docker/: .dockerignore  Dockerfile.model  Dockerfile.ollama-base
nixos-cluster/kubernetes/longhorn/: longhorn-ingress.yaml  (+2 more)
nixos-cluster/moonkit/: README.md  pyproject.toml
nixos-cluster/moonkit/moonkit/: generate_secrets_yaml.py
nixos-cluster/moonkit/tests/: test_generate_secrets_yaml.py
nixos-cluster/server-scripts/: access-dashboard.sh  access-grafana.sh  access-prometheus.sh  check-cluster.sh  deploy-cluster.sh  fix-longhorn-and-harbor.sh  install_dependencies.sh  keys_and_config.sh  verify.sh
trader/: README.md  pyproject.toml
trader/trade-alerts-email-fetcher/: setup-secrets.py
(+21 files in other folders)
