[tool.poetry]
name = "trader-alerts-email-fetcher"
version = "0.1.0"
description = "project to execute trades on Interactive Brokers"
authors = ["claudiordgz <claudio.rdgz@gmail.com>"]
license = "Apache License V2"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
google-auth-oauthlib = "^1.2.2"
boto3 = "^1.39.12"
google-api-python-client = "^2.177.0"
google-auth = "^2.40.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
